--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "dayjs": "^1.11.1",
     "framer-motion": "^6.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
